--- a/index.html
+++ b/index.html
@@ -188,7 +188,12 @@
                 - NAS: ナスダック100 (QQQM)
                 - METAL: 金・銀・銅
                 - ROMAN: 日本電気硝子(5214),ジェイテックＣ (3446),EDP(7794),旭ダイヤモンド工業(6140), 三井金属(5706), 大阪チタニウム(5726), LITE,COHR,MU,SNDK  (通称:ロマン砲)
-                **重要発表や今後の株価に反映されうる関連ニュースがある場合、特記事項として銘柄（あれば証券コード）毎に詳細な報告を追記してください
+                
+                **重要発表や今後の株価に反映されうる関連ニュースがある場合、特記事項として以下の形式で詳細な情報を追記してください
+                ⭐︎銘柄（あれば証券コード）
+                詳細な情報とアクションプランの提案
+                （次の銘柄と一行空ける）
+                **上記の⭐︎は以下のマークに読み替えてください（ポジティブなニュース：🟢／ネガティブなニュース：🔴／今の時点では判断できない重要なニュース：🟡）
             `;
 
             try {
