--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body class="space-y-5"> <header class="flex justify-between items-end pb-3 border-b border-slate-800">
         <div>
             <div class="flex items-center gap-2">
-                <span class="text-xs text-slate-500 font-bold tracking-widest">OCTODON v13.0</span>
+                <span class="text-xs text-slate-500 font-bold tracking-widest">OCTODON v13.1</span>
                 <span id="model-badge" class="text-[10px] bg-slate-800 px-2 py-0.5 rounded text-slate-400">OFFLINE</span>
             </div>
             <h1 class="text-3xl cyber-font text-white leading-none mt-1">TRINITY</h1> </div>
@@ -197,7 +197,7 @@
                 - ROMAN: 日本電気硝子(5214),ジェイテックＣ (3446),EDP(7794),旭ダイヤモンド工業(6140), 三井金属(5706), 大阪チタニウム(5726), LITE,COHR,MU,IONQ  (通称:ロマン砲)
                 
                 **重要発表や今後の株価に反映されうる関連ニュースがある場合、特記事項として以下の形式で詳細な情報を追記してください
-                ⭐︎銘柄（あれば証券コード）
+                ⭐︎銘柄（あれば証券コード）/ 現在日時での株価
                 詳細な情報とアクションプランの提案
                 （次の銘柄と一行空ける）
                 **上記の⭐︎は以下のマークに読み替えてください（機関投資家による大量売りが発生中：🔥／ポジティブな決算と株価の下落が発生中（地合いの悪さで発生する下落）：💎／その他重要なニュース：🟡）
